--- a/clear_save.css
+++ b/clear_save.css
@@ -2,7 +2,7 @@ body {
   max-width: 100%;
   max-height: 0%;
   background-color:#1F2229;
-  font-family: monaco;
+  font-family: "Lucida Console", monaco;
   color:#774716;
 }
 
