--- a/clear_save.css
+++ b/clear_save.css
@@ -2,7 +2,7 @@ body {
   max-width: 100%;
   max-height: 0%;
   background-color:#1F2229;
-  font-family: "Lucida Console", monaco;
+  font-family: monaco, "Courier New";
   color:#774716;
 }
 
@@ -23,7 +23,6 @@ div {border: 1.5px solid white;}
   a {font-size: 2vw;}
   
   #name {display:inline-block; padding-left: 10%; font-size: 4vw;}
-  
   #descContainer {
     margin-left:10.1%;
     width:79.3%;
