--- a/potd.css
+++ b/potd.css
@@ -2,7 +2,7 @@ body {
   max-width: 100%;
   max-height: 0%;
   background-color:#1F2229;
-  font-family: monaco;
+  font-family: monaco, "Courier New";
   color:#774716;
 }
 
