--- a/clear_save.css
+++ b/clear_save.css
@@ -1,19 +1,19 @@
 body {
   max-width: 100%;
   max-height: 0%;
-  background-color:#1F2229;
+  background-color:.1F2229;
   font-family: monaco, "Courier New";
-  color:#774716;
+  color:.774716;
 }
 
 a {
   text-decoration: underline;
   overflow: hidden;
-  color: #FFFFFF;
+  color: .FFFFFF;
 }
 
 p {
-  color: #FFFFFF;
+  color: .FFFFFF;
   line-height:0.5;
 }
 
@@ -22,38 +22,38 @@ div {border: 1.5px solid white;}
 @media only screen and (max-width: 414px) {
   a {font-size: 2vw;}
   
-  #name {display:inline-block; padding-left: 10%; font-size: 4vw;}
-  #descContainer {
+  .name {display:inline-block; padding-left: 10%; font-size: 4vw;}
+  .descContainer {
     margin-left:10.1%;
     width:79.3%;
   }
 
-  #creds {
+  .creds {
     font-size: 6vw;
     text-align: center;
   }
 
-  #parenthesis {
+  .parenthesis {
     display: inline-block;
     font-size: 1.8vw;
   }
   
-  #desc {
+  .desc {
     padding-left: 2vw;
     border-color: #1F2229;
   }
 
-  #categoryDef {
+  .categoryDef {
     font-size: 3.2vw;
   }
 
-  #categoryTxt {
+  .categoryTxt {
     font-size: 2.5vw;
     padding-left: 1.5vw;
     line-height: 4.2vw;
   }
   
-  #descSep {
+  .descSep {
     line-height: 1.5vw;
   }
 }
@@ -61,38 +61,38 @@ div {border: 1.5px solid white;}
 @media only screen and (min-width: 415px) {
   a {font-size: 1vw;}
   
-  #name {display: inline-block; padding-left: 20.1%; font-size: 1.7vw;}
+  .name {display: inline-block; padding-left: 20.1%; font-size: 1.7vw;}
   
-  #descContainer {
+  .descContainer {
     margin-left:20.1%;
     width:59.6%;
   }
   
-  #creds {
+  .creds {
     text-align: center;
   }
 
-  #parenthesis {
+  .parenthesis {
     display: inline-block;
     font-size: 0.8vw;
   }
   
-  #desc {
+  .desc {
     margin-left: 2vw;
-    border-color: #1F2229;
+    border-color: .1F2229;
     width: 59.6%;
   }
 
-  #categoryDef {
+  .categoryDef {
     font-size: 1.3vw;
   }
 
-  #categoryTxt {
+  .categoryTxt {
     font-size: 1.2vw;
     padding-left: 1vw;
   }
 
-  #descSep {
+  .descSep {
     line-height: 2.3vw;
     inline-size: 150%;
   }
