--- a/clear_save.css
+++ b/clear_save.css
@@ -1,19 +1,19 @@
 body {
   max-width: 100%;
   max-height: 0%;
-  background-color:.1F2229;
+  background-color: #1F2229;
   font-family: monaco, "Courier New";
-  color:.774716;
+  color: #774716;
 }
 
 a {
   text-decoration: underline;
   overflow: hidden;
-  color: .FFFFFF;
+  color: #FFFFFF;
 }
 
 p {
-  color: .FFFFFF;
+  color: #FFFFFF;
   line-height:0.5;
 }
 
@@ -79,7 +79,7 @@ div {border: 1.5px solid white;}
   
   .desc {
     margin-left: 2vw;
-    border-color: .1F2229;
+    border-color: #1F2229;
     width: 59.6%;
   }
 
