--- a/potd.css
+++ b/potd.css
@@ -21,6 +21,8 @@ a:hover {
   cursor: url("img/blockCursor.png"), auto;
 }
 
+::selection {background: #C6DEFC; color: #000000}
+
 @media only screen and (max-width: 414px) {
   #bruh {
     font-size: 2vw
