--- a/no_style.css
+++ b/no_style.css
@@ -1,3 +1,10 @@
+html {
+  height: 100%;
+  width: 100%;
+  padding: 0; margin: 0;
+  cursor: url("img/blockCursor.png"), auto;
+}
+
 body {
   max-width: 100%;
   max-height: 0%;
@@ -9,8 +16,12 @@ body {
 
 a {
   text-decoration: none;
-  overflow: hidden;
+  /* overflow: hidden; */
   color: #FFFFFF;
+}
+
+li:hover {
+  display: inline-block;
 }
 
 p {
@@ -18,6 +29,8 @@ p {
 }
 
 a:hover {
+  background: #C6DEFC;
+  color: #000000;
   cursor: url("img/blockCursor.png"), auto;
 }
 
