--- a/potd.css
+++ b/potd.css
@@ -1,3 +1,10 @@
+html {
+  height: 100%;
+  width: 100%;
+  padding: 0; margin: 0;
+  cursor: url("img/blockCursor.png"), auto;
+}
+
 body {
   max-width: 100%;
   max-height: 0%;
@@ -18,10 +25,13 @@ p {
 }
 
 a:hover {
+  background: #C6DEFC;
+  color: #000000;
+
   cursor: url("img/blockCursor.png"), auto;
 }
 
-::selection {background: #C6DEFC; color: #000000}
+::selection {background: #C6DEFC; color: #000000;}
 
 @media only screen and (max-width: 414px) {
   #bruh {
