--- a/clear_save.css
+++ b/clear_save.css
@@ -34,6 +34,7 @@ div {
   cursor: url("img/blockCursor.png"), auto;
 }
 
+::selection {background: #C6DEFC; color: #000000}
 @media only screen and (max-width: 414px) { /* DESKTOP */
   a {font-size: 2vw;}
   
