--- a/clear_save.css
+++ b/clear_save.css
@@ -28,7 +28,7 @@ p {
 
 div {
   border: 1.5px solid white;
-  height: 100%; *
+  height: 100%; 
   width: 100%;
   padding: 0; margin: 0;
   cursor: url("img/blockCursor.png"), auto;
@@ -44,7 +44,7 @@ a:hover {
 
 @media only screen and (max-width: 414px) { /* DESKTOP */
   a {font-size: 2vw;}
-    
+  
   .name {display:inline-block; padding-left: 10%; font-size: 4vw;}
   .descContainer {
     margin-left:10.1%;
@@ -111,7 +111,7 @@ a:hover {
   }
 
   .categoryTxt {
-    font-size: 1.2vw;
+    font-size: 1vw;
     padding-left: 1vw;
   }
 
