--- a/odd.css
+++ b/odd.css
@@ -43,29 +43,19 @@ a:hover {
 
 ul { list-style-type: none; }
 
-h3 {color: #FFFFFF}
-
 ::selection {background: #C6DEFC; color: #000000}
 
-@media only screen and (max-width: 414px) { /* DESKTOP */
+@media only screen and (max-width: 414px) { /* mobile */
   a {font-size: 2vw;}
-  
-  .name {display:inline-block; padding-left: 10%; font-size: 4vw;}
+ 
+  .header {color: #FFF; text-align: center; font-size: 1.7vw;}
+  .title {color: #FFF; text-align: center; font-size: 1.3vw;}
+
   .descContainer {
     margin-left:10.1%;
     width:79.3%;
   }
 
-  .creds {
-    font-size: 6vw;
-    text-align: center;
-  }
-
-  .parenthesis {
-    display: inline-block;
-    font-size: 1.8vw;
-  }
-  
   .desc {
     padding-left: 2vw;
     border-color: #1F2229;
@@ -80,29 +70,17 @@ h3 {color: #FFFFFF}
     padding-left: 1.5vw;
     line-height: 4.2vw;
   }
-  
-  .descSep {
-    line-height: 1.5vw;
-  }
 }
 
-@media only screen and (min-width: 415px) { /* mobile */
+@media only screen and (min-width: 415px) { /* DESKTOP */
   a {font-size: 1vw;}
   
-  .name {display: inline-block; padding-left: 20.1%; font-size: 1.7vw;}
-  
+  .header {color: #FFF; text-align: center; font-size: 1.7vw;}
+  .title {color: #FFF; font-size: 1.3vw;}
+
   .descContainer {
     margin-left:20.1%;
     width:59.6%;
-  }
-  
-  .creds {
-    text-align: center;
-  }
-
-  .parenthesis {
-    display: inline-block;
-    font-size: 0.8vw;
   }
   
   .desc {
@@ -118,10 +96,3 @@ h3 {color: #FFFFFF}
   .categoryTxt {
     font-size: 1.2vw;
     padding-left: 1vw;
-  }
-
-  .descSep {
-    line-height: 2.3vw;
-    inline-size: 150%;
-  }
-}
